Add correct library

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body>
 
 <div id="container" style="width:800px;height:600px;border:1px solid grey"></div>
-<input type=button on-click="executeCode"></input>
-<script src="node_modules/technicalindicators/index.js"></script>
+<input type=button onclick="executeCode">Execute</input>
+<script src="node_modules/technicalindicators/dist/browser.js"></script>
 <script src="node_modules/monaco-editor/min/vs/loader.js"></script>
 <script>
     var editor;
