Add correct fn syntax

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 
 <div id="container" style="width:800px;height:600px;border:1px solid grey"></div>
-<input type=button onclick="executeCode">Execute</input>
+<input type="button" onclick="executeCode()" value="Execute"></input>
 <script src="node_modules/technicalindicators/dist/browser.js"></script>
 <script src="node_modules/monaco-editor/min/vs/loader.js"></script>
 <script>
